إضافة صفحة اختبار Firebase ودليل الاختبار الشامل
- إنشاء Firebase_Test_Page.html لاختبار جميع خدمات Firebase
- إضافة اختبارات شاملة للاتصال والمصادقة وقاعدة البيانات
- إنشاء Firebase_Testing_Guide.md مع تعليمات مفصلة
- واجهة مستخدم جميلة ومتجاوبة لسهولة الاختبار

--- a/Friends_Trip_Organizer.html
+++ b/Friends_Trip_Organizer.html
@@ -598,13 +598,14 @@
     
     <script>
         // إعداد Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyBxYZ123456789abcdefghijklmnopqrst",
-            authDomain: "friends-trip-organizer.firebaseapp.com",
-            projectId: "friends-trip-organizer",
-            storageBucket: "friends-trip-organizer.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abcdef123456789012345"
+        const firebaseConfig =
+        {apiKey: "AIzaSyAu4wSslBo1ZYnyfE9xwfWz_o0_WDBZxW8",
+        authDomain: "friends-trip-d75b4.firebaseapp.com",
+        projectId: "friends-trip-d75b4",
+        storageBucket: "friends-trip-d75b4.firebasestorage.app",
+        messagingSenderId: "272099913183",
+        appId: "1:272099913183:web:89bd6e27898b4cf801a86a",
+        measurementId: "G-1FTMYWRFE9"
         };
         
         // تهيئة Firebase مع معالجة الأخطاء
